增加备案号

--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -1047,8 +1047,11 @@ ul.social li.rss a{background:url(../images/social_icons/rss.png) no-repeat;}
 
 	/* All Mobile Sizes (devices and browser) */
 	@media only screen and (max-width: 767px) {
-		#navigation {float: left; width: 100%}
-		#navigation select {display: block; float: left;}
+        body,.my-content{overflow-x: hidden!important;}
+		#navigation {float: left; width: 100%;height: 34px;}
+		#navigation select {display: block; width: 30%; float: right!important; margin-right: 8px;}
+        #header>.container>.four{ display: none; }
+		.container{margin-left: 0!important;}
 		#navigation ul {display: none;}
 		.slider-caption {display: none;}
 		.slider-caption-2 {display: none;}
