--- a/home/templates/share_layout/footer.html
+++ b/home/templates/share_layout/footer.html
@@ -62,8 +62,9 @@
     <!-- 960 Container -->
     <div class="container">
         <div class="sixteen columns">
-            <div class="copyright" style="text-align: center;">Copyright 2017. All Rights Reserved. Collect from
-                <a href="#" target="_blank">尹彬的博客</a>
+            <div class="copyright" style="text-align: center;">Copyright 2017-2018. All Rights Reserved. Collect from
+                <a href="#" target="_blank">尹彬</a>
+                &nbsp;&nbsp;&nbsp;鲁ICP备18036640号-1
             </div>
         </div>
     </div><!-- End 960 Container -->
