--- a/blog/templates/blog/tags/sidebar.html
+++ b/blog/templates/blog/tags/sidebar.html
@@ -131,18 +131,18 @@
         </div>
     {% endif %}
 
-    <div class="widget">
-        <div class="widget-title"><h3>开源尝试</h3></div>
-        <div class="widget-categories">
-            <div class="textwidget">
-                <p>
-                    <a href="https://github.com/felixyin" rel="nofollow" target="_blank">
-                        GitHub
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
+{#    <div class="widget">#}
+{#        <div class="widget-title"><h3>开源尝试</h3></div>#}
+{#        <div class="widget-categories">#}
+{#            <div class="textwidget">#}
+{#                <p>#}
+{#                    <a href="https://github.com/felixyin" rel="nofollow" target="_blank">#}
+{#                        GitHub#}
+{#                    </a>#}
+{#                </p>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
     <div class="widget">
         <div class="widget-title"><h3>后台功能</h3></div>
