--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -117,13 +117,13 @@
             <!-- Testimonials Carousel -->
             <div class="testimonials-carousel">
                 <ul class="carousel" style="list-style:none;">
-                    <li class="testimonial">
-                        <div class="testimonials">
-                            人一定有自信的勇气才会有创造的勇气。
-                        </div>
-                        <div class="testimonials_bg"></div>
-                        <div class="testimonials_author"><span>鲁迅</span></div>
-                    </li>
+{#                    <li class="testimonial">#}
+{#                        <div class="testimonials">#}
+{#                            人一定有自信的勇气才会有创造的勇气。#}
+{#                        </div>#}
+{#                        <div class="testimonials_bg"></div>#}
+{#                        <div class="testimonials_author"><span>鲁迅</span></div>#}
+{#                    </li>#}
                     <li class="testimonial">
                         <div class="testimonials">
                             人生重要的不是所站的位置，而是所朝的方向。
