--- a/home/templates/share_layout/base_layout.html
+++ b/home/templates/share_layout/base_layout.html
@@ -128,6 +128,12 @@
         s.parentNode.insertBefore(bp, s);
     })();
     </script>
+    <script>
+    (function(){
+    var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?976b221b6ec467924fcbdd74eb0ffc8c":"https://jspassport.ssl.qhimg.com/11.0.1.js?976b221b6ec467924fcbdd74eb0ffc8c";
+    document.write('<script src="' + src + '" id="sozz"><\/script>');
+    })();
+    </script>
     <script src="{% static 'mdeditor/js/editormd.min.js' %}"></script>
 {#    <script type="text/javascript">#}
         {#禁用右键菜单#}
