--- a/home/templates/home/404.html
+++ b/home/templates/home/404.html
@@ -2,14 +2,15 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+        {% load static %}
     <title>Sensation - Modern HTML Template</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link type="text/css" rel="stylesheet" media="all" href="css/style.css"/>
-    <link type="text/css" rel="stylesheet" media="all" href="css/colorpicker.css"/>
-    <link type="text/css" rel="stylesheet" media="all" href="js/superfish/css/superfish.css"/>
-    <link type="text/css" rel="stylesheet" media="all" href="js/tipsy/tipsy.css"/>
-    <link type="text/css" rel="stylesheet" media="all" href="js/twitter/jquery.tweet.css"/>
-    <link type="text/css" rel="stylesheet" media="all" href="js/fancybox/jquery.fancybox-1.3.4.css"/>
+    <link type="text/css" rel="stylesheet" media="all" href="{% static 'css/style.css'%}"/>
+    <link type="text/css" rel="stylesheet" media="all" href="{% static 'css/colorpicker.css' %}"/>
+    <link type="text/css" rel="stylesheet" media="all" href="{% static 'js/superfish/css/superfish.css' %}"/>
+    <link type="text/css" rel="stylesheet" media="all" href="{% static 'js/tipsy/tipsy.css' %}"/>
+    <link type="text/css" rel="stylesheet" media="all" href="{% static 'js/twitter/jquery.tweet.css' %}"/>
+    <link type="text/css" rel="stylesheet" media="all" href="{% static 'js/fancybox/jquery.fancybox-1.3.4.css' %}"/>
 
     <script src="http://apps.bdimg.com/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/slides.min.jquery.js" type="text/javascript"></script>
