--- a/home/templates/share_layout/base_layout.html
+++ b/home/templates/share_layout/base_layout.html
@@ -2,7 +2,12 @@
 {% load cache %}
 {% load compress %}
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en"> <!--<![endif]-->
+
 <head>
 
     <!-- Basic Page Needs
@@ -24,13 +29,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     {% compress css %}
+        <!-- CSS
+      ================================================== -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/skeleton.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/flexslider.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/imagebox.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/shortcodes.css' %}">
+{#        <link rel="stylesheet" type="text/css" href="{% static 'css/imagebox.css' %}">#}
+{#        <link rel="stylesheet" type="text/css" href="{% static 'css/shortcodes.css' %}">#}
         <link rel="stylesheet" type="text/css" href="{% static 'mdeditor/css/editormd.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'mdeditor/css/editormd.preview.css' %}">
+{#        <link rel="stylesheet" type="text/css" href="{% static 'mdeditor/css/editormd.preview.css' %}">#}
+
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-            {% block compress_css %}
-    {% endblock %}
+
+        <!-- Web Fonts
+      ================================================== -->
+        <!--<link href='{% static 'css/google-fonts.css' %}' rel='stylesheet' type='text/css'>-->
+{#        <!--<link href='{% static 'css/google-fonts.css' %}' rel='stylesheet' type='text/css'>-->#}
+
+        {% block compress_css %}
+        {% endblock %}
     {% endcompress %}
 
 
@@ -47,11 +67,10 @@
     <div class="container">
         <!-- Logo -->
         <div class="four columns">
-            <div id="logo" style="padding-top: 23px; height: 40px;">
-                <a href="{{ SITE_BASE_URL }}" title="{{ SITE_NAME }}"
-                   style="color:white;font-family: 'Microsoft YaHei,SimSun';font-weight: bolder;font-size: 22px!important;">
-                    {#                    <img src="{% static 'images/logo.png' %}" style="padding-top: 18px; height: 40px;" alt=""/>#}
-                    青岛前途软件技术有限公司
+            <div id="logo"  style="padding-top: 23px; height: 40px;">
+                <a href="{{ SITE_BASE_URL }}" title="{{ SITE_NAME }}" style="color:white;font-family: 'Microsoft YaHei,SimSun';font-weight: bolder;font-size: 22px!important;">
+{#                    <img src="{% static 'images/logo.png' %}" style="padding-top: 18px; height: 40px;" alt=""/>#}
+                        青岛前途软件技术有限公司
                 </a>
             </div>
         </div>
@@ -79,29 +98,86 @@
 {% compress js %}
     <!-- JS ================================================== -->
     <script type='text/javascript' src="{% static 'js/jquery.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'js/carousel.js' %}"></script>
+{#    <script type='text/javascript' src="{% static 'js/carousel.js' %}"></script>#}
     <script type='text/javascript' src="{% static 'js/jquery.flexslider.js' %}"></script>
+    <script type='text/javascript' src="{% static 'js/shortcodes.js' %}"></script>
+    <script type='text/javascript' src="{% static 'js/imagebox.min.js' %}"></script>
+{#    <script type='text/javascript' src="{% static 'js/shortcodes.js' %}"></script>#}
+{#    <script type='text/javascript' src="{% static 'js/imagebox.min.js' %}"></script>#}
+
+    <!--[if lt IE 9]>
+		<script src="{% static 'js/html5shiv.min.js' %}"></script>
+{#		<script src="{% static 'js/html5shiv.min.js' %}"></script>#}
+	<![endif]-->
+
+    <!--[if (gte IE 6)&(lte IE 8)]>
+	  	<script src="{% static 'js/selectivizr-min.js' %}"></script>
+{#	  	<script src="{% static 'js/selectivizr-min.js' %}"></script>#}
+	<![endif]-->
+
+    <!-- Imagebox Build -->
+    <script src="{% static 'js/imagebox.build.js' %}"></script>
+{#    <script src="{% static 'js/imagebox.build.js' %}"></script>#}
     <script type='text/javascript' src="{% static 'home/js/custom.js' %}"></script>
+
+{% endcompress %}
+
+{% compress js %}
     <script>
-        (function () {
-            var bp = document.createElement('script');
-            var curProtocol = window.location.protocol.split(':')[0];
-            if (curProtocol === 'https') {
-                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-            } else {
-                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-            }
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(bp, s);
-        })();
+    (function(){
+        var bp = document.createElement('script');
+        var curProtocol = window.location.protocol.split(':')[0];
+        if (curProtocol === 'https'){
+       bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+      }
+      else{
+      bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+      }
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(bp, s);
+    })();
     </script>
     <script>
-        (function () {
-            var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?976b221b6ec467924fcbdd74eb0ffc8c" : "https://jspassport.ssl.qhimg.com/11.0.1.js?976b221b6ec467924fcbdd74eb0ffc8c";
-            document.write('<script src="' + src + '" id="sozz"><\/script>');
-        })();
+    (function(){
+    var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?976b221b6ec467924fcbdd74eb0ffc8c":"https://jspassport.ssl.qhimg.com/11.0.1.js?976b221b6ec467924fcbdd74eb0ffc8c";
+    document.write('<script src="' + src + '" id="sozz"><\/script>');
+    })();
     </script>
     <script src="{% static 'mdeditor/js/editormd.min.js' %}"></script>
+{#    <script type="text/javascript">#}
+        {#禁用右键菜单#}
+{#        document.oncontextmenu = function () {#}
+{#            return true;#}
+{#        };#}
+        {#禁用选取#}
+{#        document.onselectstart = function () {#}
+{#            return false;#}
+{#        };#}
+        {#禁用复制#}
+{#        document.oncopy = function () {#}
+{#            return false;#}
+{#        };#}
+{#    </script>#}
+
     <script src="{% static 'mdeditor/js/lib/marked.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/prettify.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/raphael.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/underscore.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/flowchart.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/jquery.flowchart.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/sequence-diagram.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/mermaid.min.js' %}"></script>
+    <script src="{% static 'mdeditor/js/lib/vega.min.js' %}"></script>
+{#    <script src="{% static 'mdeditor/js/lib/prettify.min.js' %}"></script>#}
+{#    <script src="{% static 'mdeditor/js/lib/raphael.min.js' %}"></script>#}
+{#    <script src="{% static 'mdeditor/js/lib/underscore.min.js' %}"></script>#}
+{#    <script src="{% static 'mdeditor/js/lib/flowchart.min.js' %}"></script>#}
+{#    <script src="{% static 'mdeditor/js/lib/jquery.flowchart.min.js' %}"></script>#}
+{#    <script src="{% static 'mdeditor/js/lib/sequence-diagram.min.js' %}"></script>#}
+{#    <script src="{% static 'mdeditor/js/lib/mermaid.min.js' %}"></script>#}
+{#    <script src="{% static 'mdeditor/js/lib/vega.min.js' %}"></script>#}
+
     <script type="text/javascript">
         $.each($('.markdown-content'), function (idx, ele) {
             // js 解析markdown
@@ -137,10 +213,11 @@
                 openwindow('{% url "copy" %}', '复制代码', 800, 400);
             });
         });
+
     </script>
 
-{% block compress_js %}
-{% endblock %}
+    {% block compress_js %}
+    {% endblock %}
 {% endcompress %}
 
 </body>
