重做，环境配置

--- a/home/templates/share_layout/nav.html
+++ b/home/templates/share_layout/nav.html
@@ -2,10 +2,10 @@
 <div id="navigation">
     <ul>
         <li><a href="{% url 'home:index' %}">主·页</a></li>
-        {#        <li><a href="{% url 'home:portfolio-3' %}">IT服务</a></li>#}
+        <li><a href="{% url 'home:portfolio-3' %}">IT服务</a></li>
         <li><a href="{% url 'home:project-list' %}">案·例</a></li>
         <li><a href="{% url 'blog:index' %}">博·客</a></li>
-        {#        <li><a href="{% url 'home:about' %}">关于</a>#}
+        <li><a href="{% url 'home:about' %}">关于</a>
     </ul>
 </div>
 
